feat:fulllogin and registration
